# d3d12_example

D3D12BaseDemo/: CMakeLists.txt  generate.bat
D3D12BaseDemo/src/: LaunchWindows.cpp
D3D12BaseDemo/src/common/: WindowConfig.h
D3D12BaseDemo/src/core/: D3D12Framework.cpp  D3D12Framework.h  Device.cpp  Device.h  Fence.cpp  Fence.h  FreeSyncHDR.cpp  FreeSyncHDR.h  Helper.cpp  Helper.h  Resource.cpp  Resource.h  SwapChain.cpp  SwapChain.h
D3D12BaseDemo/src/utils/: utils.cpp  utils.h
Resource/Shader/Triangle/: shaders.hlsl
