cmake_minimum_required(VERSION 3.23)

project(D3D12BaseDemo)

add_definitions(-D NOMINMAX)

CMAKE_POLICY(SET CMP0057 NEW)

IF(CMAKE_CONFIGURATION_TYPES)
	SET(CMAKE_CONFIGURATION_TYPES debug profile checked release)
	SET(CMAKE_CONFIGURATION_TYPES "${CMAKE_CONFIGURATION_TYPES}" CACHE STRING
		"Reset config to what we need"
		FORCE)
	
	SET(CMAKE_SHARED_LINKER_FLAGS_CHECKED "")
	SET(CMAKE_SHARED_LINKER_FLAGS_PROFILE "")
	
	SET(CMAKE_EXE_LINKER_FLAGS_CHECKED "")
	SET(CMAKE_EXE_LINKER_FLAGS_PROFILE "")
ENDIF()

IF(NOT DEFINED APPEND_CONFIG_NAME)
	SET(APPEND_CONFIG_NAME ON)
ENDIF()

IF(APPEND_CONFIG_NAME)
	SET(CMAKE_DEBUG_POSTFIX "DEBUG")
	SET(CMAKE_PROFILE_POSTFIX "PROFILE")
	SET(CMAKE_CHECKED_POSTFIX "CHECKED")
	SET(CMAKE_RELEASE_POSTFIX "")
ENDIF()

SET(CMAKE_SHARED_LINKER_FLAGS "/DEBUG")

IF(CMAKE_CL_64)
	ADD_DEFINITIONS(-DWIN64)
ENDIF(CMAKE_CL_64)

SET(CMAKE_CXX_FLAGS "/GR- /GF /MP /Gy /EHsc /d2Zi+ /errorReport:prompt /fp:fast /Gd /Gm- /GS- /nologo /W3 /WX /Zc:forScope /Zc:inline /Zc:wchar_t /Zi")
SET(X_SLN_COMPILE_DEFS _UNICODE;UNICODE;WIN32;WIN64;_CRT_SECURE_NO_DEPRECATE;_CRT_NONSTDC_NO_DEPRECATE;_ALLOW_ITERATOR_DEBUG_LEVEL_MISMATCH;_ALLOW_RUNTIME_LIBRARY_MISMATCH;__GFSDK_DX12__;)

SET(X_SLN_DEBUG_COMPILE_DEFS _DEBUG;)
SET(X_SLN_CHECKED_COMPILE_DEFS NDEBUG;)
SET(X_SLN_PROFILE_COMPILE_DEFS NDEBUG;)
SET(X_SLN_RELEASE_COMPILE_DEFS NDEBUG;)

IF(CMAKE_CL_64)
	SET(LIBPATH_SUFFIX "x64")
ELSE(CMAKE_CL_64)
	SET(LIBPATH_SUFFIX "x86")
ENDIF(CMAKE_CL_64)

SET(X_COMPILE_DEFS
	${X_SLN_COMPILE_DEFS}
	$<$<CONFIG:debug>:${X_SLN_DEBUG_COMPILE_DEFS}>
	$<$<CONFIG:checked>:${X_SLN_CHECKED_COMPILE_DEFS}>
	$<$<CONFIG:profile>:${X_SLN_PROFILE_COMPILE_DEFS}>
	$<$<CONFIG:release>:${X_SLN_RELEASE_COMPILE_DEFS}>
)

SET(X_LINK_FLAGS "/SUBSYSTEM:WINDOWS")
SET(X_ADDITIONAL_DLLS "")

IF(CMAKE_CL_64)
	SET(D3D12_LIB ${PROJECT_SOURCE_DIR}/../D3D12/lib/x64/d3d12.lib)
	SET(D3DCOMPILER_LIB ${PROJECT_SOURCE_DIR}/../D3D12/lib/x64/d3dcompiler.lib)
	SET(DXGI_LIB ${PROJECT_SOURCE_DIR}/../D3D12/lib/x64/dxgi.lib)
	SET(DXGUI_LIB ${PROJECT_SOURCE_DIR}/../D3D12/lib/x64/dxguid.lib)
ELSE(CMAKE_CL_64)
ENDIF(CMAKE_CL_64)

IF(STATIC_WINCRT)
	SET(WINCRT_NDEBUG "/MT")
	SET(WINCRT_DEBUG "/MTd")
ELSE()
	SET(WINCRT_NDEBUG "/MD")
	SET(WINCRT_DEBUG "/MDd")
ENDIF()

SET(CMAKE_CXX_FLAGS_DEBUG "/Od /RTCsu ${WINCRT_DEBUG}")
SET(CMAKE_CXX_FLAGS_CHECKED "/Ox ${WINCRT_NDEBUG}")
SET(CMAKE_CXX_FLAGS_PROFILE "/Ox ${WINCRT_NDEBUG}")
SET(CMAKE_CXX_FLAGS_RELEASE "/Ox ${WINCRT_NDEBUG}")

SET(EXECUTABLE_OUTPUT_PATH "${PROJECT_SOURCE_DIR}/build/bin")
SET(X_SOURCE_PATH "${PROJECT_SOURCE_DIR}/src")
SET(X_SOURCE_COMMON_PATH "${X_SOURCE_PATH}/common")
SET(X_SOURCE_CORE_PATH "${X_SOURCE_PATH}/core")
SET(X_SOURCE_CORE_D3D12X_PATH "${X_SOURCE_CORE_PATH}/d3d12x")
SET(X_SOURCE_UTILS_PATH "${X_SOURCE_PATH}/utils")

SET(COMMON_SOURCE_FILES
	${X_SOURCE_COMMON_PATH}/WindowConfig.h
)

SET(CORE_SOURCE_FILES
	${X_SOURCE_CORE_PATH}/Fence.h
	${X_SOURCE_CORE_PATH}/Fence.cpp
	${X_SOURCE_CORE_PATH}/Helper.h
	${X_SOURCE_CORE_PATH}/Helper.cpp
	${X_SOURCE_CORE_PATH}/Device.h
	${X_SOURCE_CORE_PATH}/Device.cpp
	${X_SOURCE_CORE_PATH}/Resource.h
	${X_SOURCE_CORE_PATH}/Resource.cpp
	${X_SOURCE_CORE_PATH}/SwapChain.h
	${X_SOURCE_CORE_PATH}/SwapChain.cpp
	${X_SOURCE_CORE_PATH}/FreeSyncHDR.h
	${X_SOURCE_CORE_PATH}/FreeSyncHDR.cpp
	${X_SOURCE_CORE_PATH}/D3D12Framework.h
	${X_SOURCE_CORE_PATH}/D3D12Framework.cpp
)

SET(CORE_D3D12X_SOURCE_FILES
	${X_SOURCE_CORE_D3D12X_PATH}/d3dx12.h
)

SET(UTILS_SOURCE_FILES
	${X_SOURCE_UTILS_PATH}/utils.h
	${X_SOURCE_UTILS_PATH}/utils.cpp
)

SET(ROOT_SOURCE_FILES
	${X_SOURCE_PATH}/LaunchWindows.cpp
)

SOURCE_GROUP("Source" FILES ROOT_SOURCE_FILES)
SOURCE_GROUP("Source\\common" FILES ${COMMON_SOURCE_FILES})
SOURCE_GROUP("Source\\core" FILES ${CORE_SOURCE_FILES})
SOURCE_GROUP("Source\\core\\d3d12x" FILES ${CORE_D3D12X_SOURCE_FILES})
SOURCE_GROUP("Source\\utils" FILES ${UTILS_SOURCE_FILES})

ADD_EXECUTABLE(d3D12BaseDemo
	${COMMON_SOURCE_FILES}
	${CORE_SOURCE_FILES}
	${CORE_D3D12X_SOURCE_FILES}
	${UTILS_SOURCE_FILES}
	${ROOT_SOURCE_FILES}
)

TARGET_INCLUDE_DIRECTORIES(d3D12BaseDemo
	PRIVATE ${PROJECT_SOURCE_DIR}/../D3D12/include
	PRIVATE ${COMMON_SOURCE_FILES}
	PRIVATE ${CORE_SOURCE_FILES}
	PRIVATE ${CORE_D3D12X_SOURCE_FILES}
	PRIVATE ${UTILS_SOURCE_FILES}
)

TARGET_COMPILE_DEFINITIONS(d3D12BaseDemo
	PRIVATE ${X_COMPILE_DEFS}
)

SET_TARGET_PROPERTIES(d3D12BaseDemo PROPERTIES
	COMPILE_PDB_NAME_DEBUG "d3D12BaseDemo${CMAKE_DEBUG_POSTFIX}"
	COMPILE_PDB_NAME_CHECKED "d3D12BaseDemo${CMAKE_CHECKED_POSTFIX}"
	COMPILE_PDB_NAME_PROFILE "d3D12BaseDemo${CMAKE_PROFILE_POSTFIX}"
	COMPILE_PDB_NAME_RELEASE "d3D12BaseDemo${CMAKE_RELEASE_POSTFIX}"
)

TARGET_COMPILE_OPTIONS(d3D12BaseDemo PRIVATE /wd4005 /wd4244)

TARGET_LINK_LIBRARIES(d3D12BaseDemo
	PUBLIC ${D3D12_LIB} ${D3DCOMPILER_LIB} ${DXGI_LIB} ${DXGUI_LIB}
)

SET_TARGET_PROPERTIES(d3D12BaseDemo PROPERTIES LINK_FLAGS ${X_LINK_FLAGS})